# asst-gamma-engine

./: .gitignore  README.md  asst_research_master_v1.5.csv  asst_research_master_v1.5_meta.json  data.db  meta.json  pyproject.toml
.github/workflows/: test.yml
engine/: __init__.py  fetch.py  persist.py
engine/compute/: __init__.py  banding.py  iv_band.py  legacy_suggestions.py  stochastics.py
engine/exports/: bci_evidence.py  master_research.py  selector_quant.py
engine/feeds/: chain.py  tiingo.py  vendor.py
engine/migrations/: 0001_initial.sql
engine/orchestration/: gap_check.py  integrity_sweep.py  pipeline_state.py  regime_alert.py
engine/selector/: __init__.py  engine.py  stats.py  types.py
engine/shared/: iv_band_spec.json
engine/tests/: test_defensive_yield.py  test_iv_band.py  test_parity_validation.py  test_persist.py  test_selector_helpers.py  test_selector_parity.py  test_stats.py
engine/tests/fixtures/selector_golden/: MANIFEST.json  README.md  capture_inputs.py
engine/tests/fixtures/selector_golden/2026-04-09_PM/: cohort_subset.json  output.golden.json  positions.json  recent_regimes.json  run.json
engine/tests/fixtures/selector_golden/2026-04-14_PM/: cohort_subset.json  output.golden.json  recent_regimes.json  run.json
engine/tests/fixtures/selector_golden/2026-05-07_PM/: cohort_subset.json  output.golden.json  recent_regimes.json  run.json
engine/tests/fixtures/selector_golden/2026-05-08_PM/: cohort_subset.json  output.golden.json  recent_regimes.json  run.json
engine/tests/fixtures/selector_golden/2026-05-11_PM/: cohort_subset.json  output.golden.json  recent_regimes.json  (+1 more)
