[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asst-gamma-engine"
version = "0.1.0.dev0"
description = "Open-source quantitative engine for ASST Bitcoin treasury gamma analysis"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "AngryBuhda", email = "angrybuhda@gmail.com" },
]
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "pydantic>=2.5",
    "requests>=2.31",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1.0",
    "mypy>=1.7",
]

[project.urls]
Homepage = "https://github.com/AngryBuhda/asst-gamma-engine"
Repository = "https://github.com/AngryBuhda/asst-gamma-engine"
Issues = "https://github.com/AngryBuhda/asst-gamma-engine/issues"

[project.scripts]
asst-fetch = "engine.fetch:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*"]
exclude = ["engine.tests*"]

[tool.setuptools.package-data]
engine = ["shared/*.json", "migrations/*.sql"]

[tool.pytest.ini_options]
testpaths = ["engine/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = [
    "E501",  # line too long \u2014 we deliberately keep long rationale strings readable
    "B008",  # function call in default argument (used for datetime.now())
]
